[metadata]
name = networking-midonet-ext
summary = OpenStack MidoNet Neutron Plugin Extension
description-file =
    README.rst
author = Midokura
author-email = dev@midokura.com
home-page = https://github.com/midonet/networking-midonet-ext
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    midonet_ext

[global]
setup-hooks =
    pbr.hooks.setup_hook

[compile_catalog]
directory = midonet_ext/locale
domain = midonet-ext

[update_catalog]
domain = midonet-ext
output_dir = midonet_ext/locale
input_file = midonet_ext/locale/midonet.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = midonet_ext/locale/midonet.pot

[entry_points]
neutron.ml2.mechanism_drivers =
    midonet_ext = midonet_ext.neutron.ml2.mech_driver:MidonetMechanismDriver
neutron.core_plugins =
    midonet_v2_ext = midonet_ext.neutron.plugin_v2:MidonetPluginV2

[wheel]
universal = 1
